welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:8: error: '<-' expected but '=' found.
for (compteur=1 to 8)
             ^Runner:21: error: illegal start of simple expression
	}
        ^