welcome.lessons.welcome.loopfor.LoopStairs.scala.code
var compteur=1

avance()
avance()
avance()

for (compteur=1 to 8)
{
	gaucha()
	avance()
	droite()
	avance()
	compteur=compteur+1
}

avance()
avance()
avance()